# claude-code-telegram

./: .dockerignore  .env.example  .gitignore  BEFORE_AFTER.md  BUGFIX_SUMMARY.md  CHANGELOG.md  CLAUDE.md  DOCKER.md  Dockerfile  FEATURE_SUMMARY.md  FINAL_SUMMARY.md  FRIDAY_TEST.md  IMPLEMENTATION.md  INSTALLATION.md  MANUAL_RELEASE.md  MODEL_MAPPER.md  MODEL_SWITCHING.md  MULTI_AI_STATUS.md  Makefile  PUBLISHING.md  QUICK_START_PUBLISHING.md  README.md  RELEASE_NOTES.md  ROADMAP_MULTI_AI.md  SYSTEMD_SETUP.md  TODO_MULTI_AI_IMPLEMENTATION.md  compose.yaml  docker-compose.yml  docker-entrypoint.sh  install.sh  pyproject.toml  soul.md
.github/workflows/: release.yml
appimage/: build-appimage.sh
config/: agent.claude.md  architecture.md  goal-tool-interface.md  projects.example.yaml
config/persona/: mai.md
docs/: apt-repository.md  configuration.md  development.md  setup.md
docs/design/: e2e-encryption.md
docs/grafana/: telegram-bot-dashboard.json
docs/plans/: 2026-02-18-progress-updater.md  2026-02-28-dynamic-command-menu-design.md  2026-02-28-dynamic-command-menu.md  2026-03-02-interactive-user-feedback-design.md  2026-03-02-interactive-user-feedback.md
flatpak/: com.github.milhy545.MultiCodeBot.appdata.xml  com.github.milhy545.MultiCodeBot.desktop  com.github.milhy545.MultiCodeBot.yml
mini-app/: index.html  package-lock.json  package.json
mini-app/src/: App.tsx
scripts/: build-apt-repo.sh  build-deb.sh
snap/: snapcraft.yaml
src/: __init__.py  main.py
src/ai/: __init__.py  base_provider.py  provider_manager.py
src/api/: __init__.py  auth.py  dashboard.py  metrics.py  recruitment.py  server.py
src/assistant/: briefing.py  briefing_scheduler.py  persona.py  proactive_checkin.py  task_reminders.py
src/bot/: core.py  i18n.py  orchestrator.py  progress.py  update_processor.py
src/cache/: __init__.py  backend.py  decorators.py  manager.py
src/claude/: __init__.py  exceptions.py  facade.py  integration.py  memory.py  model_mapper.py  monitor.py  resilience.py  sdk_integration.py  session.py  worktree.py
src/config/: environments.py  features.py  loader.py  settings.py
src/events/: handlers.py  types.py
src/gamification/: __init__.py  constants.py  models.py  repository.py  service.py  streak.py
src/goals/: __main__.py  cli.py
src/i18n/: __init__.py  en.py  zh.py
src/mcp/: telegram_server.py
src/notifications/: alerts.py
src/plugins/: __init__.py  base.py  example_plugin.py  hooks.py  loader.py
src/projects/: registry.py  thread_manager.py
src/scheduler/: scheduler.py
src/security/: audit.py  auth.py  validators.py
src/storage/: backend.py  compat.py  database.py  facade.py  models.py  repositories.py  session_storage.py
src/utils/: constants.py  paths.py
tests/: test_model_mapper.py
(+131 files in other folders)
